# cpp-compilation-reference

./: .gitignore  README.md
1_hello_world/: readme.md
2_hello_multiple_files/: main.cpp  readme.md
3_hello_header_file/: hello.cpp  readme.md
4_hello_header_file_twice/: hello.cpp  hello.hpp  main.cpp  readme.md
4_hello_makefile/: Makefile  hello.hpp  readme.md
5_hello_cmake/: CMakeLists.txt  main.cpp
6_hello_custom_library/: CMakeLists.txt  Makefile  Manual_Makefile
6_hello_custom_library/include/: badmath.hpp
6_hello_custom_library/src/: badmath.cpp
7_hello_nested_cmake/: CMakeLists.txt  main.cpp
8_hello_emscripten/: hello.js  hello.wasm  hello_world.cpp  readme.md
9_emscripten_custom_js_library/: hello_world.cpp
